# bterm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  lcov.info
docs/: README.md  api-reference.md  code-standards.md  codebase-summary.md  deployment-guide.md  system-architecture.md
e2e/: fixtures.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: assets-ui.spec.ts  auth.spec.ts  clipboard.spec.ts  ime-manual-context.spec.ts  mobile-ui.spec.ts  renderer-fallback.spec.ts  renderer-optimization.spec.ts  session-management.spec.ts  shared-resize.spec.ts  sync-management.spec.ts  terminal-advanced.spec.ts  terminal-interaction.spec.ts  terminal-layout.spec.ts  vietnamese-ime.spec.ts
frontend/: package-lock.json  package.json
plans/: auth-system-20260112.md  e2e-auth-fixture-20260113.md  e2e-dynamic-ports-20260111.md  mobile-ime-fix-20260112.md  mobile-keyboard-fix-20260111.md  mobile-touch-optimization-20260111.md  mobile-touch-selection-fix-20260112.md  persistent-terminal-sessions-20260113.md  realtime-sync-20260111.md  render-optimization-20260113.md  smart-clipboard-20260112.md  subprocess-cleanup-20260112.md  webgl-dom-test-split-20260111.md  webgl-fallback-20260111.md  webgl-renderer-20260111.md
src/: api.rs  auth.rs  db.rs  lib.rs  main.rs  pty_manager.rs  session.rs  ws.rs
tests/: auth_integration.rs  password_change_integration.rs  port_integration.rs  sse_integration.rs  ws_integration.rs
