[package]
name = "bterminal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
futures-util = "0.3.31"
mime_guess = "2.0.5"
portable-pty = { version = "0.9.0", features = ["serde"] }
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
hyper-util = "0.1.19"
tokio-stream = "0.1.18"
async-stream = "0.3.6"

[dev-dependencies]
tokio-tungstenite = "0.26.2"
